# file-classifier

./: README.md  file_data.txt  main.py  pyproject.toml  qr_data.txt  requirements.txt
classifier/: __init__.py  classifiers.py  main.py  models.py  qr_classifier.py
google_sheets/: README.md  __init__.py  config.py  main.py  params.py  service.py  sheets_data.txt
mailer/: __init__.py  mail_handler.py  main.py
sheet_maker/: img_handler.py  main.py  maker.py
utils/: __init__.py  file_converter.py  file_handler.py  file_merger.py
