[tool.poetry]
name = "classifier"
version = "0.1.0"
description = "Clasificador de examanes y pruebas. DCCPUC"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "0.3.9"
Pillow = "5.2.0"
PyPDF2 = "1.26.0"
pyzbar = "0.1.7"
Wand = "0.4.4"
opencv-contrib-python = "3.4.2.17"
numpy = "1.16.0"
tqdm = "4.31.1"
qrcode = "6.0"
google-api-python-client = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
